[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "monz"
description = "Simple CLI for your Monzo account."
authors = [{name = "Paweł Adamczak", email = "pawel.ad@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["monzo", "cli"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dynamic = ["version"]

dependencies = [
  "Babel",
  "click",
  "click-default-group",
  "pymonzo<1.0",
]

[project.optional-dependencies]
tests = [
  "coverage[toml]",
  "pytest",
]
dev = [
  "monz[tests]",
  # Code style
  "black",
  "interrogate",
  "isort",
  "ruff",
  # Type checking
  "mypy",
  # Misc
  "flit",
  "nox",
]

[project.urls]
Homepage = "https://monz.pawelad.dev/"
Documentation = "https://monz.readthedocs.io/"
GitHub = "https://github.com/pawelad/monz"
Issues = "https://github.com/pawelad/monz/issues"

[project.scripts]
monz = "monz.__main__:main"

[tool.black]
target-version = ["py38"]

[tool.coverage.run]
branch = true
parallel = true
source = ["src"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
  "if TYPE_CHECKING:",
]

[tool.interrogate]
ignore-init-module = true
ignore-nested-classes = true
fail-under = 95

[tool.isort]
profile = "black"
src_paths = ["src"]

[tool.mypy]
python_version = "3.8"
mypy_path = "src"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --import-mode=importlib --verbose"
testpaths = "tests"
pythonpath = "src"

[tool.ruff]
target-version = "py38"

[tool.ruff.lint]
select = [
  "A",  # flake8-builtins
  "ANN",  # flake8-annotations
  "B",  # flake8-bugbear
  "C4",  # flake8-comprehensions
  "C90",  # mccabe
  "D",  # pydocstyle
  "DJ",  # flake8-django
  "E",  # flake8
  "F",  # flake8
  "N",  # pep8-naming
  "PT",  # flake8-pytest-style
  "S",  # flake8-bandit
  "SIM",  # flake8-simplify
  "T20",  # flake8-print
  "TRY",  # tryceratops
  "UP",  # pyupgrade
]

[tool.ruff.lint.pydocstyle]
convention = "google"
